# tox-windows-issue

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
tests/: .coverage  __init__.py  test_conversions.py
tox_windows_issue/: __init__.py
